[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Data/Theme/THEME_Garret.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Data/Theme/THEME_Slider.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Data/Theme/THEME_GarretBold.tres" type="Theme" id=3]
[ext_resource path="res://scenes/GameCode/Menu/AudioSettingsMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sounds/ButtonPress.mp3" type="AudioStream" id=5]

[sub_resource type="InputEventAction" id=5]
action = "ui_cancel"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="AudioSettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -636.0
margin_top = -155.5
margin_right = 636.0
margin_bottom = 155.5
theme = ExtResource( 1 )

[node name="VBoxLabel" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 634.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Master" type="Label" parent="HBoxContainer/VBoxLabel"]
margin_right = 634.0
margin_bottom = 80.0
text = "Master Volume"

[node name="Music" type="Label" parent="HBoxContainer/VBoxLabel"]
margin_top = 84.0
margin_right = 634.0
margin_bottom = 164.0
text = "Music Volume"

[node name="Sound" type="Label" parent="HBoxContainer/VBoxLabel"]
margin_top = 168.0
margin_right = 634.0
margin_bottom = 248.0
text = "Sound Volume"

[node name="VBoxSlider" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 638.0
margin_right = 1272.0
margin_bottom = 311.0
size_flags_horizontal = 3
alignment = 1

[node name="MasterSlider" type="HSlider" parent="HBoxContainer/VBoxSlider"]
margin_right = 634.0
margin_bottom = 32.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource( 2 )
min_value = -60.0
max_value = 5.0
value = 5.0

[node name="MusicSlider" type="HSlider" parent="HBoxContainer/VBoxSlider"]
margin_top = 105.0
margin_right = 634.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource( 2 )
min_value = -60.0
max_value = 5.0
value = 5.0

[node name="SoundSlider" type="HSlider" parent="HBoxContainer/VBoxSlider"]
margin_top = 210.0
margin_right = 634.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource( 2 )
min_value = -60.0
max_value = 20.0
value = 20.0

[node name="ButtonBack" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.124074
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "Audio"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[connection signal="visibility_changed" from="." to="." method="_on_AudioSettingsMenu_visibility_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxSlider/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxSlider/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="drag_ended" from="HBoxContainer/VBoxSlider/SoundSlider" to="." method="_on_SoundSlider_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/VBoxSlider/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="button_up" from="ButtonBack" to="." method="_on_ButtonBack_button_up"]
